# PythonPiscine42

Day00/ex00/: Hello.py
Day00/ex01/: format_ft_time.py
Day00/ex02/: find_ft_type.py
Day00/ex03/: NULL_not_found.py
Day00/ex04/: whatis.py
Day00/ex05/: building.py
Day00/ex06/: filterstring.py  ft_filter.py
Day00/ex07/: sos.py
Day00/ex08/: Loading.py
Day00/ex09/ft_package/: README.md  pyproject.toml
Day00/ex09/ft_package/ft_package/: __init__.py  ft_filter.py
Day00/ex09/ft_package/ft_package.egg-info/: PKG-INFO  SOURCES.txt
Day01/ex00/: give_bmi.py  tester.py
Day01/ex01/: array2D.py  tester.py
Day01/ex02/: load_image.py  tester.py
Day01/ex03/: zoom.py
Day01/ex04/: load_image.py  rotate.py
Day01/ex05/: pimp_image.py  tester.py
Day02/ex00/: load_csv.py
Day02/ex01/: aff_life.py
Day02/ex02/: aff_pop.py
Day02/ex03/: life_expectancy_years.csv  projection_life.py
Day03/ex00/: S1E9.py  tester.py
Day03/ex01/: S1E7.py  tester.py
